@@ -82,6 +82,7 @@ Library
 Build
 -----
 
+- Patch #1161914: Add a python-config script.
 - Patch #1324762:Remove ccpython.cc; replace --with-cxx with
   --with-cxx-main. Link with C++ compiler only if --with-cxx-main was
   specified. (Can be overridden by explicitly setting LINKCC.) Decouple
